--- a/Ajax - 瀑布流页面.html
+++ b/Ajax - 瀑布流页面.html
@@ -41,7 +41,7 @@
             function getLists() {
                 ajax('post', 'getPics.php', 'cpage=' + page, function (resText) {
                     var aResponse = JSON.parse(resText);
-
+                    //ajax获取返回的数据，生成图片和图片说明列表
                     for (let i = 0; i < aResponse.length; i++) {
                         var _index = getShortest(),
                             oImg = document.createElement('img'),
@@ -62,7 +62,7 @@
                     }
                 })
             }
-
+            //当滚动条滚动时，判断滚动条高度+可视区高度是否大于最短图片列表的Top+offsetHeight，小于时则继续加载图片
             window.onscroll = function () {
                 var scrollTop = window.pageYOffset || document.documentElement.scrollTop || document.body.scrollTop || 0,
                     clientHeight = document.documentElement.clientHeight || document.body.clientHeight,
@@ -79,7 +79,7 @@
                 }
                 
             }
-
+            //获得各图片列表中高度最小的一项，并返回该索引
             function getShortest() {
                 var index = 0,
                     iShortest = aLi[index].offsetHeiht;
